upgrade lab3 of kate alehina