@@ -1,8 +1,8 @@
 package org.patients;
 
 import java.time.LocalDate;
+import java.util.Collection;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.List;
 
 public class PatientTask {
@@ -22,16 +22,19 @@ public class PatientTask {
 
     // Список людей, которые проходили обследование за последние 3 года
     public List<Patient> lastThreeYearsPatients() {
+        LocalDate lastTreeYear = LocalDate.now().minusYears(3);
         return patients.stream()
-                .filter(patient -> patient.getDate().isAfter(LocalDate.now().minusYears(3)))
-                .collect(Collectors.toList());
+                .filter(patient -> patient.getDate().isAfter(lastTreeYear))
+                .toList();
     }
 
     // Список людей, которые проходили обследование последние 5 лет, но не проходили последние 2 года
     public List<Patient> lastFiveNotLastTwoPatients() {
+        LocalDate lastTwoYear = LocalDate.now().minusYears(2);
+        LocalDate lastFiveYear = LocalDate.now().minusYears(5);
         return patients.stream()
-                .filter(patient -> patient.getDate().isBefore(LocalDate.now().minusYears(2)) &&
-                        patient.getDate().isAfter(LocalDate.now().minusYears(5)))
-                .collect(Collectors.toList());
+                .filter(patient -> patient.getDate().isBefore(lastTwoYear) &&
+                        patient.getDate().isAfter(lastFiveYear))
+                .toList();
     }
 }
